# win32stream

./: .gitignore  CMakeLists.txt  README.md  Win32Stream.sln
examples/: BackupExample.cpp  CMakeLists.txt  ScreenCaptureExample.cpp  WindowCaptureExample.cpp
examples/desktop_stream/: CMakeLists.txt
src/: DataTransferObject.hpp  ImageAcquisition.hpp  ProcessEngine.hpp  main.cpp  win32stream.hpp
src/ProcessEngine/: ProcessInternals.cpp  ProcessInternals.hpp  WinRoutine.cpp  WinRoutine.hpp
src/capture/: BasicCaptureScreen.cpp  BasicCaptureScreen.hpp  CommonTypes.hpp  WIn32CaptureScreen.cpp  Win32CaptureScreen.hpp  Win32CaptureWindow.cpp  Win32CaptureWindow.hpp
src/exception/: CaptureChecker.hpp  Exception.hpp
tools/: x64compile.ps1  x64compile.sh  x64release.ps1  x86compile.ps1
